--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   image_picker: ^1.0.8
   qr_code_scanner: ^1.0.1
   flutter_barcode_scanner: ^2.0.0
+  file_picker: ^8.0.0+1
+  fl_chart: ^0.62.0
 
 dev_dependencies:
   flutter_test:
