--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   file_picker: ^8.0.0+1
   fl_chart: ^0.62.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
