--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   file_picker: ^8.0.0+1
   fl_chart: ^0.62.0
   shared_preferences: ^2.2.3
+  blue_thermal_printer: ^1.2.3
+  flutter_blue_plus: ^1.34.5
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
