--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   blue_thermal_printer: ^1.2.3
   flutter_blue_plus: ^1.34.5
   permission_handler: ^11.3.1
+  csv: ^6.0.0
+  open_file: ^3.3.2
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
