--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,5 +51,10 @@ flutter:
   - assets/img/auth.png
   - assets/img/excash_logo_hitam.png
   - assets/img/profile.png
+  - assets/img/confirm.png
+  - assets/img/excash_logo2.png
+  - assets/img/launch.png
+
+  
 
   
