--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   path_provider: ^2.1.4
   uuid: ^4.5.1
   showcaseview: ^4.0.1
+  flutter_multi_formatter: ^2.13.7
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
