--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_multi_formatter: ^2.13.7
   pie_chart: ^5.4.0
   encrypt: ^5.0.3
+  telephony: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,8 @@ flutter:
   - assets/img/confirm.png
   - assets/img/excash_logo2.png
   - assets/img/launch.png
+  - assets/img/lupa_sandi.png
+
 
   
 
