--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   pie_chart: ^5.4.0
   encrypt: ^5.0.3
   telephony: ^0.2.0
+  app_settings: ^6.1.1
 
 dev_dependencies:
   flutter_test:
