--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ flutter:
   - assets/img/excash_logo2.png
   - assets/img/launch.png
   - assets/img/lupa_sandi.png
+  - assets/img/slide3.png
+  - assets/img/slide1.png
+  - assets/img/slide2.png
+
 
 
   
